--- a/deepseek_html_20250421_920246.html
+++ b/deepseek_html_20250421_920246.html
@@ -137,11 +137,90 @@
     <div class="filter-row">
       <label>Ближайшее метро (можно выбрать несколько)</label>
       <div class="multiselect">
-        <label><input type="checkbox" name="metro" value="Петроградская"> Петроградская</label>
-        <label><input type="checkbox" name="metro" value="Василеостровская"> Василеостровская</label>
-        <label><input type="checkbox" name="metro" value="Невский проспект"> Невский проспект</label>
-        <label><input type="checkbox" name="metro" value="Гостиный двор"> Гостиный двор</label>
-        <label><input type="checkbox" name="metro" value="Чёрная речка"> Чёрная речка</label>
+       
+      <div class="metro-line">🚇 Линия 1 (Красная)</div>
+      <label><input type="checkbox" name="metro" value="Девяткино"> Девяткино</label>
+      <label><input type="checkbox" name="metro" value="Гражданский проспект"> Гражданский проспект</label>
+      <label><input type="checkbox" name="metro" value="Академическая"> Академическая</label>
+      <label><input type="checkbox" name="metro" value="Политехническая"> Политехническая</label>
+      <label><input type="checkbox" name="metro" value="Площадь Мужества"> Площадь Мужества</label>
+      <label><input type="checkbox" name="metro" value="Лесная"> Лесная</label>
+      <label><input type="checkbox" name="metro" value="Выборгская"> Выборгская</label>
+      <label><input type="checkbox" name="metro" value="Площадь Ленина"> Площадь Ленина</label>
+      <label><input type="checkbox" name="metro" value="Чернышевская"> Чернышевская</label>
+      <label><input type="checkbox" name="metro" value="Площадь Восстания"> Площадь Восстания</label>
+      <label><input type="checkbox" name="metro" value="Владимирская"> Владимирская</label>
+      <label><input type="checkbox" name="metro" value="Пушкинская"> Пушкинская</label>
+      <label><input type="checkbox" name="metro" value="Технологический институт"> Технологический институт</label>
+      <label><input type="checkbox" name="metro" value="Балтийская"> Балтийская</label>
+      <label><input type="checkbox" name="metro" value="Нарвская"> Нарвская</label>
+      <label><input type="checkbox" name="metro" value="Кировский завод"> Кировский завод</label>
+      <label><input type="checkbox" name="metro" value="Автово"> Автово</label>
+      <label><input type="checkbox" name="metro" value="Ленинский проспект"> Ленинский проспект</label>
+      <label><input type="checkbox" name="metro" value="Проспект Ветеранов"> Проспект Ветеранов</label>
+
+      <!-- Линия 2 (Синяя) -->
+      <div class="metro-line">🚇 Линия 2 (Синяя)</div>
+      <label><input type="checkbox" name="metro" value="Парнас"> Парнас</label>
+      <label><input type="checkbox" name="metro" value="Проспект Просвещения"> Проспект Просвещения</label>
+      <label><input type="checkbox" name="metro" value="Озерки"> Озерки</label>
+      <label><input type="checkbox" name="metro" value="Удельная"> Удельная</label>
+      <label><input type="checkbox" name="metro" value="Пионерская"> Пионерская</label>
+      <label><input type="checkbox" name="metro" value="Чёрная речка"> Чёрная речка</label>
+      <label><input type="checkbox" name="metro" value="Петроградская"> Петроградская</label>
+      <label><input type="checkbox" name="metro" value="Горьковская"> Горьковская</label>
+      <label><input type="checkbox" name="metro" value="Невский проспект"> Невский проспект</label>
+      <label><input type="checkbox" name="metro" value="Сенная площадь"> Сенная площадь</label>
+      <label><input type="checkbox" name="metro" value="Технологический институт"> Технологический институт</label>
+      <label><input type="checkbox" name="metro" value="Фрунзенская"> Фрунзенская</label>
+      <label><input type="checkbox" name="metro" value="Московские ворота"> Московские ворота</label>
+      <label><input type="checkbox" name="metro" value="Электросила"> Электросила</label>
+      <label><input type="checkbox" name="metro" value="Парк Победы"> Парк Победы</label>
+      <label><input type="checkbox" name="metro" value="Московская"> Московская</label>
+      <label><input type="checkbox" name="metro" value="Звёздная"> Звёздная</label>
+      <label><input type="checkbox" name="metro" value="Купчино"> Купчино</label>
+
+      <!-- Линия 3 (Зелёная) -->
+      <div class="metro-line">🚇 Линия 3 (Зелёная)</div>
+      <label><input type="checkbox" name="metro" value="Беговая"> Беговая</label>
+      <label><input type="checkbox" name="metro" value="Новокрестовская"> Новокрестовская</label>
+      <label><input type="checkbox" name="metro" value="Приморская"> Приморская</label>
+      <label><input type="checkbox" name="metro" value="Василеостровская"> Василеостровская</label>
+      <label><input type="checkbox" name="metro" value="Гостиный двор"> Гостиный двор</label>
+      <label><input type="checkbox" name="metro" value="Маяковская"> Маяковская</label>
+      <label><input type="checkbox" name="metro" value="Площадь Александра Невского"> Площадь Александра Невского</label>
+      <label><input type="checkbox" name="metro" value="Елизаровская"> Елизаровская</label>
+      <label><input type="checkbox" name="metro" value="Ломоносовская"> Ломоносовская</label>
+      <label><input type="checkbox" name="metro" value="Пролетарская"> Пролетарская</label>
+      <label><input type="checkbox" name="metro" value="Обухово"> Обухово</label>
+      <label><input type="checkbox" name="metro" value="Рыбацкое"> Рыбацкое</label>
+
+      <!-- Линия 4 (Оранжевая) -->
+      <div class="metro-line">🚇 Линия 4 (Оранжевая)</div>
+      <label><input type="checkbox" name="metro" value="Спасская"> Спасская</label>
+      <label><input type="checkbox" name="metro" value="Достоевская"> Достоевская</label>
+      <label><input type="checkbox" name="metro" value="Лиговский проспект"> Лиговский проспект</label>
+      <label><input type="checkbox" name="metro" value="Площадь Александра Невского"> Площадь Александра Невского</label>
+      <label><input type="checkbox" name="metro" value="Новочеркасская"> Новочеркасская</label>
+      <label><input type="checkbox" name="metro" value="Ладожская"> Ладожская</label>
+      <label><input type="checkbox" name="metro" value="Проспект Большевиков"> Проспект Большевиков</label>
+      <label><input type="checkbox" name="metro" value="Улица Дыбенко"> Улица Дыбенко</label>
+      <label><input type="checkbox" name="metro" value="Улица Дыбенко"> Горный институт</label>
+
+      <!-- Линия 5 (Фиолетовая) -->
+      <div class="metro-line">🚇 Линия 5 (Фиолетовая)</div>
+      <label><input type="checkbox" name="metro" value="Комендантский проспект"> Комендантский проспект</label>
+      <label><input type="checkbox" name="metro" value="Старая Деревня"> Старая Деревня</label>
+      <label><input type="checkbox" name="metro" value="Крестовский остров"> Крестовский остров</label>
+      <label><input type="checkbox" name="metro" value="Чкаловская"> Чкаловская</label>
+      <label><input type="checkbox" name="metro" value="Спортивная"> Спортивная</label>
+      <label><input type="checkbox" name="metro" value="Адмиралтейская"> Адмиралтейская</label>
+      <label><input type="checkbox" name="metro" value="Садовая"> Садовая</label>
+      <label><input type="checkbox" name="metro" value="Звенигородская"> Звенигородская</label>
+      <label><input type="checkbox" name="metro" value="Обводный канал"> Обводный канал</label>
+      <label><input type="checkbox" name="metro" value="Волковская"> Волковская</label>
+      <label><input type="checkbox" name="metro" value="Бухарестская"> Бухарестская</label>
+      <label><input type="checkbox" name="metro" value="Международная"> Международная</label>
       </div>
     </div>
     
