--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
       };
       
       // Загружаем данные
-      const response = await fetch('ВАШ_JSON_API_URL');
+      const response = await fetch('https://script.google.com/macros/s/AKfycbyzaas-t3OS2y1EkmOBbpu4Uax4dnf-P76Aedpqw3iDInSp79YdMGjCRRR6BKy20pEc/exec');
       const data = await response.json();
       
       // Фильтрация
